--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <h2>Notre Carte</h2>
     
     <div class="menu-frame">
-        <img id="image-active" src="page1.PNG" alt="Chargement du menu...">
+        <img id="image-active" src="page1.png" alt="Chargement du menu...">
     </div>
 
     <div class="nav-bar">
@@ -114,11 +114,11 @@
 </div>
 
 <script>
-    // 1. LISTE DES 12 IMAGES (Extension .PNG respectée)
+    // 1. LISTE DES 12 IMAGES (Extension .png respectée)
     const images = [
-        "page1.PNG", "page2.PNG", "page3.PNG", "page4.PNG", 
-        "page5.PNG", "page6.PNG", "page7.PNG", "page8.PNG",
-        "page9.PNG", "page10.PNG", "page11.PNG", "page12.PNG"
+        "page1.png", "page2.png", "page3.png", "page4.png", 
+        "page5.png", "page6.png", "page7.png", "page8.png",
+        "page9.png", "page10.png", "page11.png", "page12.png"
     ];
     
     // 2. PRÉCHARGEMENT POUR ÉLIMINER LE RETARD
@@ -169,3 +169,4 @@
 
 </body>
 </html>
+
