--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <h2>Notre Carte</h2>
     
     <div class="menu-frame">
-        <img id="image-active" src="page1.PNG" alt="Chargement...">
+        <img id="image-active" src="page1.png" alt="Chargement...">
     </div>
 
     <div class="nav-bar">
@@ -132,9 +132,9 @@
 
 <script>
     const images = [
-        "page1.PNG", "page2.PNG", "page3.PNG", "page4.PNG", 
-        "page5.PNG", "page6.PNG", "page7.PNG", "page8.PNG",
-        "page9.PNG", "page10.PNG", "page11.PNG", "page12.PNG"
+        "page1.png", "page2.png", "page3.png", "page4.png", 
+        "page5.png", "page6.png", "page7.png", "page8.png",
+        "page9.png", "page10.png", "page11.png", "page12.png"
     ];
     
     // Préchargement
@@ -164,3 +164,4 @@
 
 </body>
 </html>
+
